# factor-lab

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  PR_DESCRIPTION.md  README.md  eslint.config.mjs  factor-lab.code-workspace  middleware.ts  package-lock.json  package.json  proxy.ts  render.yaml  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
app/: globals.css  layout.tsx  (+2 more)
services/engine/: README.md  pyproject.toml
services/engine/factorlab_engine/: __init__.py  ingest.py  ml.py  ml_features.py  ml_training.py  ml_training_models.py  ml_types.py  ml_validation.py  supabase_io.py  test_metrics_formulas.py  turnover.py  watchdog.py  worker.py
services/engine/factorlab_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/engine/factorlab_engine/repositories/: client.py  equity.py  ingest_job_scans.py  ingest_jobs.py  ingest_jobs_batches.py  ingest_legacy.py  jobs.py  jobs_retries.py  prices.py  reports.py  runs.py
services/engine/factorlab_engine/worker/: claiming.py  execution.py  http_server.py  ingest_legacy.py  ingest_repair.py  pricing.py  progress.py  settings.py  strategies.py
services/engine/tests/: test_backtest_core.py  test_ingest.py  test_metrics_formulas.py  test_ml.py  test_smoke.py  test_strategies.py  test_supabase_io.py  test_universe_resolution.py  test_validation.py  test_watchdog.py  test_worker_concurrency.py  test_worker_entrypoint.py  test_worker_http_server.py  test_worker_ingest_windows.py  test_worker_ml_dispatch.py
(+385 files in other folders)
